Clean fabric8 discovery 1 (#1183)