@@ -36,9 +36,6 @@ import org.springframework.cloud.client.ServiceInstance;
 import org.springframework.cloud.client.discovery.DiscoveryClient;
 import org.springframework.cloud.kubernetes.commons.discovery.DefaultKubernetesServiceInstance;
 import org.springframework.cloud.kubernetes.commons.discovery.KubernetesDiscoveryProperties;
-import org.springframework.expression.Expression;
-import org.springframework.expression.spel.standard.SpelExpressionParser;
-import org.springframework.expression.spel.support.SimpleEvaluationContext;
 import org.springframework.util.Assert;
 import org.springframework.util.CollectionUtils;
 import org.springframework.util.StringUtils;
@@ -61,14 +58,11 @@ public class KubernetesDiscoveryClient implements DiscoveryClient {
 
 	private final KubernetesDiscoveryProperties properties;
 
-	private final ServicePortSecureResolver servicePortSecureResolver;
-
 	private final KubernetesClientServicesFunction kubernetesClientServicesFunction;
 
-	private final SpelExpressionParser parser = new SpelExpressionParser();
+	private final ServicePortSecureResolver servicePortSecureResolver;
 
-	private final SimpleEvaluationContext evalCtxt = SimpleEvaluationContext.forReadOnlyDataBinding()
-			.withInstanceMethods().build();
+	private final Fabric8DiscoveryServicesAdapter adapter;
 
 	private KubernetesClient client;
 
@@ -76,18 +70,20 @@ public class KubernetesDiscoveryClient implements DiscoveryClient {
 			KubernetesDiscoveryProperties kubernetesDiscoveryProperties,
 			KubernetesClientServicesFunction kubernetesClientServicesFunction) {
 
-		this(client, kubernetesDiscoveryProperties, kubernetesClientServicesFunction,
+		this(client, kubernetesDiscoveryProperties, kubernetesClientServicesFunction, null,
 				new ServicePortSecureResolver(kubernetesDiscoveryProperties));
 	}
 
 	KubernetesDiscoveryClient(KubernetesClient client, KubernetesDiscoveryProperties kubernetesDiscoveryProperties,
-			KubernetesClientServicesFunction kubernetesClientServicesFunction,
+			KubernetesClientServicesFunction kubernetesClientServicesFunction, Predicate<Service> filter,
 			ServicePortSecureResolver servicePortSecureResolver) {
 
 		this.client = client;
 		this.properties = kubernetesDiscoveryProperties;
-		this.kubernetesClientServicesFunction = kubernetesClientServicesFunction;
 		this.servicePortSecureResolver = servicePortSecureResolver;
+		this.kubernetesClientServicesFunction = kubernetesClientServicesFunction;
+		this.adapter = new Fabric8DiscoveryServicesAdapter(kubernetesClientServicesFunction,
+				kubernetesDiscoveryProperties, filter);
 	}
 
 	public KubernetesClient getClient() {
@@ -291,35 +287,13 @@ public class KubernetesDiscoveryClient implements DiscoveryClient {
 
 	@Override
 	public List<String> getServices() {
-		String spelExpression = this.properties.filter();
-		Predicate<Service> filteredServices;
-		if (spelExpression == null || spelExpression.isEmpty()) {
-			filteredServices = (Service instance) -> true;
-		}
-		else {
-			Expression filterExpr = this.parser.parseExpression(spelExpression);
-			filteredServices = (Service instance) -> {
-				Boolean include = filterExpr.getValue(this.evalCtxt, instance, Boolean.class);
-				if (include == null) {
-					return false;
-				}
-				return include;
-			};
-		}
-		return getServices(filteredServices);
+		return adapter.apply(client).stream().map(s -> s.getMetadata().getName()).toList();
 	}
 
+	@Deprecated(forRemoval = true)
 	public List<String> getServices(Predicate<Service> filter) {
-		if (properties.namespaces().isEmpty()) {
-			return this.kubernetesClientServicesFunction.apply(this.client).list().getItems().stream().filter(filter)
-					.map(s -> s.getMetadata().getName()).collect(Collectors.toList());
-		}
-		List<String> services = new ArrayList<>();
-		for (String ns : properties.namespaces()) {
-			services.addAll(getClient().services().inNamespace(ns).list().getItems().stream().filter(filter)
-					.map(s -> s.getMetadata().getName()).toList());
-		}
-		return services;
+		return new Fabric8DiscoveryServicesAdapter(kubernetesClientServicesFunction, properties, filter).apply(client)
+				.stream().map(s -> s.getMetadata().getName()).toList();
 	}
 
 	@Override
